# Studio-Executor

./: CMakeLists.txt  main.cpp
dependencies/luau/VM/src/: lapi.cpp  lstate.h
src/core/environment/: environment.cpp  environment.h
src/core/execution/: execution.cpp  execution.h
src/roblox/engine/: engine.h
src/roblox/taskscheduler/: taskscheduler.cpp  taskscheduler.h
